added grpc service for tools/tool_failures
