# backend/tools/internal/app/init_routes.go
@@ -2,7 +2,6 @@ package app
 
 import (
 	tool_controller "github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/internal/domains/tool/controller"
-	tool_failure_controller "github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/internal/domains/tool_failure/controller"
 	"github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/storage"
 	"github.com/gofiber/fiber/v3"
 )
@@ -13,7 +12,6 @@ func (app *App) initRoutes() error {
 
 	addRoutes := []AddRouteFn{
 		tool_controller.AddRoutes,
-		tool_failure_controller.AddRoutes,
 	}
 
 	for _, fn := range addRoutes {
