# backend/tools/internal/domains/tool_failure/handler/handler.go
@@ -1,11 +1,12 @@
-package tool_failure_controller
+package tool_failure_handler
 
 import (
 	tool_failure_deps "github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/internal/domains/tool_failure/deps"
 	tool_failure_params "github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/internal/domains/tool_failure/params"
 	"github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/internal/models"
 	"github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/backend/tools/storage"
-	"github.com/gofiber/fiber/v3"
+	"github.com/PereverzevIvan/razrabotka-biznes-prilojenii-konditerskaya/proto/pkg/api/tool_failure"
+	"google.golang.org/grpc"
 )
 
 type IToolFailureUsecase interface {
@@ -15,34 +16,20 @@ type IToolFailureUsecase interface {
 	GetAllReasons() ([]models.ToolFailureReason, error)
 }
 
-type IJWTService interface {
-	GetRoleFromAccessTokenCookie(ctx fiber.Ctx) (string, error)
-	GetUserIDFromAccessTokenCookie(ctx fiber.Ctx) (int, error)
-}
-
-type toolFailureController struct {
-	// toolFailureReasonService controllers.IToolFailureReasonService
+type ToolFailureHandler struct {
+	tool_failure.UnimplementedToolFailureServiceServer
 	toolFailureUsecase IToolFailureUsecase
-	jwtService         IJWTService
 }
 
-func AddRoutes(
-	api fiber.Router,
+func RegisterHandler(
+	s grpc.ServiceRegistrar,
 	storage *storage.Storage,
 ) {
-
 	deps := tool_failure_deps.NewDeps(storage.DB, storage.JwtConfig)
 
-	controller := &toolFailureController{
-		jwtService: deps.JwtService(),
-		// toolFailureReasonService: toolFailureReasonService,
+	handler := &ToolFailureHandler{
 		toolFailureUsecase: deps.ToolFailureUsecase(),
 	}
 
-	apiTools := api.Group("/tool-failures")
-
-	apiTools.Get("/", controller.GetAll)
-	apiTools.Post("/", controller.Create)
-	apiTools.Get("/reasons", controller.GetAllReasons)
-	apiTools.Post("/add-fixed-at", controller.AddFixedAt)
+	tool_failure.RegisterToolFailureServiceServer(s, handler)
 }
